fix button alignment

--- a/src/modules/commons/components/base-list/base-list.scss
+++ b/src/modules/commons/components/base-list/base-list.scss
@@ -65,4 +65,8 @@ tr.preview-row {
 
 }
 
+.action {
+  text-align: right;
+}
+
 
